[package]
name = "tortilla"
version = "0.1.0"
authors = ["Erick Hernandez Curiel <Erick.HernandezCuriel@mx.bosch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
