[package]
name = "tortilla"
version = "0.1.0"
authors = ["Erick Hernandez Curiel <Erick.HernandezCuriel@mx.bosch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tortilla"
path = "src/lib.rs"

[[bin]]
name = "tortilla"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
clap = "2.33"
ethereum-types = "0.7"
ethabi = "8.0"
